<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save"
        android:title="@string/save_to_flash"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_load"
        android:icon="@drawable/ic_refresh"
        android:title="@string/load_from_flash"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_disconnect"
        android:icon="@drawable/ic_bluetooth_searching"
        android:title="Disconnect"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reset"
        android:title="@string/reset_defaults"
        app:showAsAction="never" />

</menu>